--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,18 @@ services:
     depends_on:
       - prometheus
     restart: unless-stopped
+
+  cloudwatch-exporter:
+    image: prom/cloudwatch-exporter:latest
+    container_name: serversage-cloudwatch
+    ports:
+      - "9106:9106"
+    volumes:
+      - ./cloudwatch-exporter:/config
+    environment:
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_REGION=us-east-1
+    command:
+      - /config/config.yml
+    restart: unless-stopped
