--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -7,4 +7,7 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  # Add more scrape configurations here as needed
+  - job_name: 'cloudwatch'
+    scrape_interval: 1m
+    static_configs:
+      - targets: ['cloudwatch-exporter:9106']
