--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: serversage-prometheus
+    user: "65534:65534"  # nobody:nobody user
     ports:
       - "9090:9090"
     volumes:
