--- a/cloudwatch-exporter/config.yml
+++ b/cloudwatch-exporter/config.yml
@@ -1,31 +1,109 @@
 region: us-east-1
 metrics:
+  # CPU Metrics
   - aws_namespace: AWS/EC2
     aws_metric_name: CPUUtilization
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Average, Maximum]
+    period_seconds: 60
+
+  - aws_namespace: AWS/EC2
+    aws_metric_name: CPUCreditUsage
     aws_dimensions: [InstanceId]
     aws_statistics: [Average]
     period_seconds: 60
 
   - aws_namespace: AWS/EC2
-    aws_metric_name: NetworkIn
+    aws_metric_name: CPUCreditBalance
     aws_dimensions: [InstanceId]
     aws_statistics: [Average]
+    period_seconds: 60
+
+  # Memory Metrics (requires CloudWatch agent)
+  - aws_namespace: CWAgent
+    aws_metric_name: mem_used_percent
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Average, Maximum]
+    period_seconds: 60
+
+  # Disk Metrics (requires CloudWatch agent)
+  - aws_namespace: CWAgent
+    aws_metric_name: disk_used_percent
+    aws_dimensions: [InstanceId, device, fstype, path]
+    aws_statistics: [Average]
+    period_seconds: 60
+
+  # Network Metrics
+  - aws_namespace: AWS/EC2
+    aws_metric_name: NetworkIn
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Average, Sum]
     period_seconds: 60
 
   - aws_namespace: AWS/EC2
     aws_metric_name: NetworkOut
     aws_dimensions: [InstanceId]
+    aws_statistics: [Average, Sum]
+    period_seconds: 60
+
+  - aws_namespace: AWS/EC2
+    aws_metric_name: NetworkPacketsIn
+    aws_dimensions: [InstanceId]
     aws_statistics: [Average]
     period_seconds: 60
 
   - aws_namespace: AWS/EC2
-    aws_metric_name: EBSReadBytes
+    aws_metric_name: NetworkPacketsOut
     aws_dimensions: [InstanceId]
     aws_statistics: [Average]
+    period_seconds: 60
+
+  # EBS Metrics
+  - aws_namespace: AWS/EC2
+    aws_metric_name: EBSReadBytes
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Average, Sum]
     period_seconds: 60
 
   - aws_namespace: AWS/EC2
     aws_metric_name: EBSWriteBytes
     aws_dimensions: [InstanceId]
+    aws_statistics: [Average, Sum]
+    period_seconds: 60
+
+  - aws_namespace: AWS/EC2
+    aws_metric_name: EBSReadOps
+    aws_dimensions: [InstanceId]
     aws_statistics: [Average]
+    period_seconds: 60
+
+  - aws_namespace: AWS/EC2
+    aws_metric_name: EBSWriteOps
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Average]
+    period_seconds: 60
+
+  - aws_namespace: AWS/EC2
+    aws_metric_name: EBSIOBalance%
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Average]
+    period_seconds: 60
+
+  # Status Checks
+  - aws_namespace: AWS/EC2
+    aws_metric_name: StatusCheckFailed
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Maximum]
+    period_seconds: 60
+
+  - aws_namespace: AWS/EC2
+    aws_metric_name: StatusCheckFailed_Instance
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Maximum]
+    period_seconds: 60
+
+  - aws_namespace: AWS/EC2
+    aws_metric_name: StatusCheckFailed_System
+    aws_dimensions: [InstanceId]
+    aws_statistics: [Maximum]
     period_seconds: 60
