--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,25 @@ services:
       - ./grafana/provisioning:/etc/grafana/provisioning
       - ./grafana/grafana.ini:/etc/grafana/grafana.ini
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=serversage
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: serversage
+      GF_AUTH_GENERIC_OAUTH_ENABLED: true
+      GF_AUTH_MANAGED_SERVICE_ACCOUNTS_ENABLED: true
+      GF_AUTH_GENERIC_OAUTH_NAME: Keycloak
+      GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: true
+      GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ${OAUTH_CLIENT_ID}
+      GF_AUTH_GENERIC_OAUTH_SCOPES: openid email profile roles offline_access
+      GF_AUTH_GENERIC_USE_REFRESH_TOKENS: true
+      GF_AUTH_GENERIC_OAUTH_EMAIL_ATTRIBUTE_PATH: email
+      GF_AUTH_GENERIC_OAUTH_LOGIN_ATTRIBUTE_PATH: username
+      GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: full_name
+      GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ${OAUTH_CLIENT_SECRET}
+      GF_AUTH_GENERIC_OAUTH_AUTH_URL: ${KEYCLOAK_AUTH_URL}
+      GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ${KEYCLOAK_TOKEN_URL}
+      GF_AUTH_GENERIC_OAUTH_API_URL: ${KEYCLOAK_API_URL}
+      GF_AUTH_SIGNOUT_REDIRECT_URL: ${KEYCLOAK_LOGOUT_URL}?id_token_hint=%{id_token}&post_logout_redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Flogin
+      GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(roles[*], 'grafana_grafana_admin') && 'GrafanaAdmin' || contains(roles[*], 'grafana_admin') && 'Admin' || contains(roles[*], 'grafana_editor') && 'Editor' || 'Viewer'
+
     depends_on:
       - prometheus
     restart: unless-stopped
@@ -58,6 +75,49 @@ services:
       serversage-network:
         aliases:
           - cloudwatch-exporter
+
+  postgres:
+    image: postgres:16
+    container_name: postgres_demo
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    networks:
+      serversage-network:
+        aliases:
+          - postgres
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:25.0.1
+    container_name: 'keycloak_demo'
+    command: start-dev --import-realm 
+    environment:
+      - KC_HOSTNAME=${KEYCLOAK_PUBLIC_URL}/
+      - KC_HOSTNAME_STRICT=false
+      - KC_HOSTNAME_BACKCHANNEL_DYNAMIC=true
+      - KC_HTTP_ENABLED=true    
+      - KC_DB=postgres
+      - KC_DB_USERNAME=${POSTGRES_USER}
+      - KC_DB_PASSWORD=${POSTGRES_PASSWORD}
+      - KC_DB_URL_HOST=postgres
+      - KC_DB_URL_PORT=5432
+      - KC_DB_URL_DATABASE=${POSTGRES_DB}
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+    depends_on:
+      - postgres
+    ports:
+      - '3002:8080'
+    volumes:
+      - ./keycloak/realm-import:/opt/keycloak/data/import
+    networks:
+      serversage-network:
+        aliases:
+          - keycloak
+          - keycloak-public
 
 networks:
   serversage-network:
