Adds Grafana domain configuration variables
Enables proper external URL configuration when Grafana is deployed behind a proxy or custom domain

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: serversage
+      GF_SERVER_ROOT_URL: ${GRAFANA_ROOT_URL}
+      GF_SERVER_DOMAIN: ${GRAFANA_DOMAIN}
       GF_AUTH_GENERIC_OAUTH_ENABLED: true
       GF_AUTH_MANAGED_SERVICE_ACCOUNTS_ENABLED: true
       GF_AUTH_GENERIC_OAUTH_NAME: Keycloak
