--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,22 @@ services:
           - keycloak
           - keycloak-public
 
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    command:
+      - '--path.rootfs=/host'
+    ports:
+      - "9100:9100"
+    pid: host
+    restart: unless-stopped
+    volumes:
+      - '/:/host:ro,rslave'
+    networks:
+      serversage-network:
+        aliases:
+          - node-exporter
+
 networks:
   serversage-network:
     driver: bridge
