--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -15,3 +15,8 @@ scrape_configs:
     scheme: http
     static_configs:
       - targets: ['cloudwatch-exporter:9106']
+
+  - job_name: 'node_exporter'
+    static_configs:
+      - targets: ['node-exporter:9100']
+    scrape_interval: 15s
