--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
       GF_AUTH_GENERIC_OAUTH_API_URL: ${KEYCLOAK_API_URL}
       GF_AUTH_SIGNOUT_REDIRECT_URL: ${KEYCLOAK_LOGOUT_URL}?id_token_hint=%{id_token}&post_logout_redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Flogin
       GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(roles[*], 'grafana_grafana_admin') && 'GrafanaAdmin' || contains(roles[*], 'grafana_admin') && 'Admin' || contains(roles[*], 'grafana_editor') && 'Editor' || 'Viewer'
+      GF_PLUGINS_PREINSTALL: grafana-llm-app
+
 
     depends_on:
       - prometheus
@@ -59,6 +61,21 @@ services:
       serversage-network:
         aliases:
           - grafana
+
+  postgres_exporter:
+    image: prometheuscommunity/postgres-exporter:latest
+    container_name: serversage-postgres-exporter
+    environment:
+      DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable"
+    ports:
+      - "9187:9187"
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    networks:
+      serversage-network:
+        aliases:
+          - postgres-exporter
 
   cloudwatch-exporter:
     image: prom/cloudwatch-exporter:latest
