--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -20,3 +20,8 @@ scrape_configs:
     static_configs:
       - targets: ['node-exporter:9100']
     scrape_interval: 15s
+
+  - job_name: 'postgresql'
+    static_configs:
+      - targets: ['postgres-exporter:9187']
+    scrape_interval: 15s
