Adds Grafana OnCall
Integrates Grafana OnCall for incident management and alerting:
- Updates Grafana to specific OSS version 11.5.1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
           - prometheus
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana-oss:11.5.1-ubuntu
     container_name: serversage-grafana
     ports:
       - "3000:3000"
@@ -51,7 +51,7 @@ services:
       GF_AUTH_GENERIC_OAUTH_API_URL: ${KEYCLOAK_API_URL}
       GF_AUTH_SIGNOUT_REDIRECT_URL: ${KEYCLOAK_LOGOUT_URL}?id_token_hint=%{id_token}&post_logout_redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Flogin
       GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(roles[*], 'grafana_grafana_admin') && 'GrafanaAdmin' || contains(roles[*], 'grafana_admin') && 'Admin' || contains(roles[*], 'grafana_editor') && 'Editor' || 'Viewer'
-      GF_PLUGINS_PREINSTALL: grafana-llm-app
+      GF_PLUGINS_PREINSTALL: grafana-llm-app,grafana-oncall-app
 
 
     depends_on:
@@ -61,6 +61,111 @@ services:
       serversage-network:
         aliases:
           - grafana
+
+  oncall:
+    image: grafana/oncall
+    user: "root"
+    restart: always
+    ports:
+      - "8085:8085"
+    command: sh -c "uwsgi --ini uwsgi.ini"
+    environment:
+      DATABASE_TYPE: sqlite3
+      BROKER_TYPE: redis
+      BASE_URL: http://oncall:8080
+      SECRET_KEY: my_random_secret_must_be_more_than_32_characters_long
+      FEATURE_PROMETHEUS_EXPORTER_ENABLED: false
+      PROMETHEUS_EXPORTER_SECRET: ${PROMETHEUS_EXPORTER_SECRET:-prometheus}
+      REDIS_URI: redis://redis:6379/0
+      DJANGO_SETTINGS_MODULE: settings.hobby
+      CELERY_WORKER_QUEUE: "default,critical,long,slack,telegram,webhook,retry,celery,grafana"
+      CELERY_WORKER_CONCURRENCY: "1"
+      CELERY_WORKER_MAX_TASKS_PER_CHILD: "100"
+      CELERY_WORKER_SHUTDOWN_INTERVAL: "65m"
+      CELERY_WORKER_BEAT_ENABLED: "True"
+      GRAFANA_API_URL: http://grafana:3000
+    volumes:
+      - ./data/oncall:/var/lib/oncall
+    networks:
+      serversage-network:
+        aliases:
+          - oncall
+
+  celery:
+    image: grafana/oncall
+    user: "root"
+    restart: always
+    command: sh -c "./celery_with_exporter.sh"
+    environment:
+      DATABASE_TYPE: sqlite3
+      BROKER_TYPE: redis
+      BASE_URL: http://oncall:8080
+      SECRET_KEY: my_random_secret_must_be_more_than_32_characters_long
+      FEATURE_PROMETHEUS_EXPORTER_ENABLED: false
+      PROMETHEUS_EXPORTER_SECRET: ${PROMETHEUS_EXPORTER_SECRET:-prometheus}
+      REDIS_URI: redis://redis:6379/0
+      DJANGO_SETTINGS_MODULE: settings.hobby
+      CELERY_WORKER_QUEUE: "default,critical,long,slack,telegram,webhook,retry,celery,grafana"
+      CELERY_WORKER_CONCURRENCY: "1"
+      CELERY_WORKER_MAX_TASKS_PER_CHILD: "100"
+      CELERY_WORKER_SHUTDOWN_INTERVAL: "65m"
+      CELERY_WORKER_BEAT_ENABLED: "True"
+      GRAFANA_API_URL: http://grafana:3000
+    volumes:
+      - ./data/oncall:/var/lib/oncall
+    networks:
+      serversage-network:
+        aliases:
+          - celery
+
+  oncall_db_migration:
+    image: grafana/oncall
+    user: "root"
+    command: python manage.py migrate --noinput
+    environment:
+      DATABASE_TYPE: sqlite3
+      BROKER_TYPE: redis
+      BASE_URL: http://oncall:8080
+      SECRET_KEY: my_random_secret_must_be_more_than_32_characters_long
+      FEATURE_PROMETHEUS_EXPORTER_ENABLED: false
+      PROMETHEUS_EXPORTER_SECRET: ${PROMETHEUS_EXPORTER_SECRET:-prometheus}
+      REDIS_URI: redis://redis:6379/0
+      DJANGO_SETTINGS_MODULE: settings.hobby
+      CELERY_WORKER_QUEUE: "default,critical,long,slack,telegram,webhook,retry,celery,grafana"
+      CELERY_WORKER_CONCURRENCY: "1"
+      CELERY_WORKER_MAX_TASKS_PER_CHILD: "100"
+      CELERY_WORKER_SHUTDOWN_INTERVAL: "65m"
+      CELERY_WORKER_BEAT_ENABLED: "True"
+      GRAFANA_API_URL: http://grafana:3000
+    volumes:
+      - ./data/oncall:/var/lib/oncall
+    networks:
+      serversage-network:
+        aliases:
+          - oncall_db_migration
+
+
+  redis:
+    image: redis:7.0.15
+    restart: always
+    expose:
+      - 6379
+    volumes:
+      - ./data/redis:/data
+    deploy:
+      resources:
+        limits:
+          memory: 500m
+          cpus: "0.5"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      timeout: 5s
+      interval: 5s
+      retries: 10
+    networks:
+      serversage-network:
+        aliases:
+          - redis
 
   postgres_exporter:
     image: prometheuscommunity/postgres-exporter:latest
