--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,9 @@ services:
       GRAFANA_API_URL: http://grafana:3000
     volumes:
       - ./data/oncall:/var/lib/oncall
+    depends_on:
+      oncall_db_migration:
+        condition: service_completed_successfully
     networks:
       serversage-network:
         aliases:
@@ -113,6 +116,9 @@ services:
       GRAFANA_API_URL: http://grafana:3000
     volumes:
       - ./data/oncall:/var/lib/oncall
+    depends_on:
+      oncall_db_migration:
+        condition: service_completed_successfully
     networks:
       serversage-network:
         aliases:
