--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,6 +4,11 @@ global:
   scrape_timeout: 30s
 
 scrape_configs:
+  - job_name: 'keycloak'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: ['keycloak:9000']
+    scheme: http
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
