Disable accessControlOnCall feature to make OnCall plugin work
"accessControlOnCall" is a feature flag used by the Grafana OnCall plugin. When it’s enabled, the plugin checks users’ RBAC permissions before allowing access to on‑call features. In setups that don’t use enterprise-level RBAC, this flag should be false

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -6,3 +6,10 @@
 
 enable = dashgpt
 dashgpt = true
+
+# accessControlOnCall is a feature flag used by the Grafana OnCall plugin.
+# When it’s enabled, the plugin checks users’ RBAC permissions before 
+# allowing access to OnCall features. In setups that don’t use
+# enterprise-level RBAC, this flag should be false.
+# https://github.com/grafana/oncall/issues/5100#issuecomment-2388968942
+accessControlOnCall = false # required for oncall plugin to work
