added tempo config for traces

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,6 @@ services:
           - fastapi
 
   spring-boot:
-    # build: ./app_springboot/
     image: aniketxshinde/serversage:0.1.0
     ports:
       - "8081:8081"
@@ -31,7 +30,7 @@ services:
       - TARGET_TWO_SVC=fastapi:8000
       - SERVER_PORT=8081
       - OTEL_EXPORTER=otlp_span
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
       - OTEL_EXPORTER_OTLP_INSECURE=true
       - OTEL_METRICS_EXPORTER=none
       - OTEL_SERVICE_NAME=spring-boot
@@ -41,6 +40,28 @@ services:
       serversage-network:
         aliases:
           - spring-boot
+
+  spring-boot-user:
+    image: aniketxshinde/serversage:0.1.1
+    ports:
+      - "8082:8082"
+    environment:
+      - SERVER_PORT=8082
+      - OTEL_EXPORTER=otlp
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - OTEL_METRICS_EXPORTER=none
+      - OTEL_SERVICE_NAME=spring-boot-user
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
+      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
+    command: "java -javaagent:/opentelemetry-javaagent.jar -jar ./app-user.jar"
+    container_name: serversage-spring-boot-user
+    networks:
+      serversage-network:
+        aliases:
+          - spring-boot-user
+
   express:
     # build: ./app_express/
     image: ghcr.io/blueswen/opentelemetry-apm/express:latest
@@ -66,7 +87,7 @@ services:
     volumes:
       - ./etc/otel-collector-config.yaml:/conf/config.yaml
     ports:
-      - "4317:4317" # OTLP gRPC receiver
+      # - "4317:4317" # OTLP gRPC receiver
       - "4318:4318" # OTLP http receiver
       - "8889:8889" # Prometheus metrics exporter
     restart: on-failure
@@ -78,13 +99,14 @@ services:
 
   tempo:
     image: grafana/tempo:latest
-    command: [ "--target=all", "--storage.trace.backend=local", "--storage.trace.local.path=/var/tempo", "--auth.enabled=false" ]
+    command: [ "--target=all", "-config.file=/etc/tempo.yaml", "--auth.enabled=false" ]
     user: root
     volumes:
       - ./data/tempo:/var/tempo
-      # - ./etc/tempo.yaml:/etc/tempo.yaml
+      - ./etc/tempo.yaml:/etc/tempo.yaml  
     ports:
-      - "14250:14250"
+      - "3200:3200"   # tempo
+      - "4317:4317"  # otlp grpc
     container_name: serversage-tempo
     networks:
       serversage-network:
