--- a/etc/otel-collector-config.yaml
+++ b/etc/otel-collector-config.yaml
@@ -11,6 +11,10 @@ exporters:
     endpoint: tempo:4317
     tls:
       insecure: true
+  otlp/logs:
+    endpoint: "0.0.0.0:4317"
+    tls:
+      insecure: true
   prometheus:
     endpoint: "0.0.0.0:8889"
 
@@ -33,3 +37,6 @@ service:
     metrics/spanmetrics:
       receivers: [spanmetrics]
       exporters: [prometheus]
+    logs:
+      receivers: [otlp]
+      exporters: [otlp/logs] 
