fixed spell error

--- a/grafana/provisioning/datasources/datasource.yml
+++ b/grafana/provisioning/datasources/datasource.yml
@@ -10,7 +10,7 @@ datasources:
   basicAuth: false
   isDefault: false
   version: 1
-  editable: rue
+  editable: true
   jsonData:
     httpMethod: GET
 - name: Tempo
