fix: permission denied in opensearch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,39 @@
 version: '3.8'
-
 services:
-
+  # Volume initialization service
+  volume-init:
+    image: alpine:latest
+    user: root
+    command: >
+      sh -c "
+        pwd
+        ls -la
+        chown -R 1000:1000 /mnt/data/opensearch
+        pwd
+        chmod -R ugo+rwx  /mnt/data/opensearch
+        chmod -R ug+rwx,o-rwx /mnt/data/opensearch
+      "
+    volumes:
+      - ./data:/mnt/data
+    restart: "no"
+    networks:
+      serversage-network:
+        aliases:
+          - volume-init
+  grafana-init:
+    image: alpine/curl:latest
+    depends_on:
+      grafana:
+        condition: service_healthy
+    command: 
+      - sh
+      - ./enable-grafana-oncall-plugin.sh
+    restart: "no" # Run once and exit
+    networks:
+      serversage-network:
+        aliases:
+          - grafana-init
   fastapi:
-    # build: ./app_fastapi/
     image: ghcr.io/blueswen/opentelemetry-apm/fastapi:latest
     ports:
       - "8000:8000"
@@ -63,7 +93,6 @@ services:
           - spring-boot-user
 
   express:
-    # build: ./app_express/
     image: ghcr.io/blueswen/opentelemetry-apm/express:latest
     ports:
       - "3001:3001"
@@ -85,11 +114,14 @@ services:
   opensearch:
     image: opensearchproject/opensearch:2.18.0
     container_name: serversage-opensearch
+    user: 1000:1000 # Run as a nobody user
     deploy:
       resources:
         limits:
           memory: 700mb
     restart: unless-stopped
+    depends_on:
+      - volume-init
     environment:
       - cluster.name=aws-demo-cluster
       - node.name=demo-node
@@ -107,6 +139,9 @@ services:
         hard: 65536
     ports:
       - "9200"
+    volumes:
+      # - ./custom-opensearch.yml:/usr/share/opensearch/config/opensearch.yml # Mount custom config file
+      - ./data/opensearch:/usr/share/opensearch/data # Persistent data storage
     healthcheck:
       test: curl -s http://localhost:9200/_cluster/health | grep -E '"status":"(green|yellow)"'
       start_period: 10s
@@ -154,7 +189,6 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: serversage-prometheus
-    # user: "65534:65534"  # nobody:nobody user
     user: root
     ports:
       - "9090:9090"
@@ -169,6 +203,8 @@ services:
       # - '--storage.tsdb.retention.time=30d'  # Set retention period
       # - '--storage.tsdb.retention.size=50GB'  # Data older than 30d OR exceeding 50GB will be deleted
     restart: unless-stopped
+    depends_on:
+      - volume-init
     networks:
       serversage-network:
         aliases:
@@ -221,20 +257,6 @@ services:
       serversage-network:
         aliases:
           - grafana
-
-  grafana-init:
-    image: alpine/curl:latest
-    depends_on:
-      grafana:
-        condition: service_healthy
-    command: 
-      - sh
-      - ./enable-grafana-oncall-plugin.sh
-    restart: "no" # Run once and exit
-    networks:
-      serversage-network:
-        aliases:
-          - grafana-init
 
   oncall:
     image: grafana/oncall
