--- a/etc/queries.yaml
+++ b/etc/queries.yaml
@@ -218,26 +218,39 @@ pg_active_slowsql:
     - slowsql_count:
         usage: "COUNTER"
         description: "the numbers of slow sqls"
-pg_active_slowqry:
-  query: |
-    select extract (milliseconds from (now() - t1.query_start)) as qry_ex_time, t1.query, t1.state,t2.rolname,t1.datname
-    from pg_stat_activity t1 , pg_roles t2 where t1.query!= '' and t1.usesysid = t2.oid ORDER BY qry_ex_time DESC;
-  metrics:
-    - qry_ex_time:
-        usage: "GAUGE"
-        description: "Query execution time"
-    - query:
-        usage: "LABEL"
-        description: "query"
-    - state:
-        usage: "LABEL"
-        description: "state of query"
-    - rolname:
-        usage: "LABEL"
-        description: "rolname of user related to query"
-    - datname:
-        usage: "LABEL"
-        description: "data base name of query"
+# pg_active_slowqry:
+#   help: "Execution time of queries in milliseconds"
+#   query: |
+#     SELECT 
+#         EXTRACT(MILLISECONDS FROM (now() - t1.query_start)) AS qry_ex_time, 
+#         t1.query, 
+#         t1.state, 
+#         t2.rolname, 
+#         t1.datname
+#     FROM 
+#         pg_stat_activity t1, 
+#         pg_roles t2
+#     WHERE 
+#         t1.query != '' AND 
+#         t1.usesysid = t2.oid
+#     ORDER BY 
+#         qry_ex_time DESC;
+#   metrics:
+#   - qry_ex_time:
+#       usage: "GAUGE"
+#       description: "Execution time of queries in milliseconds"
+#   - query:
+#       usage: "INFO"
+#       description: "The query being executed"
+#   - state:
+#       usage: "INFO"
+#       description: "State of the query"
+#   - rolname:
+#       usage: "INFO"
+#       description: "Role name executing the query"
+#   - datname:
+#       usage: "INFO"
+#       description: "Database name"
 pg_never_used_indexes:
   query: |
     select pi.schemaname, pi.relname, pi.indexrelname, 
