--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -353,7 +353,7 @@ services:
     container_name: serversage-postgres-exporter
     environment:
       DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable"
-      PG_EXPORTER_EXTEND_QUERY_PATH: "/queries.yaml"
+      # PG_EXPORTER_EXTEND_QUERY_PATH: "/queries.yaml"
     volumes:
       - ./etc/queries.yaml:/queries.yaml
     ports:
